Linhas do botão de jogar comentadas

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <span class="pontos">0</span> <em>Pontos</em><br>
             </div>
                        
-            <div class="play">
+<!--            <div class="play">
         		<i class="fa fa-play-circle"></i>
                 <span>Play</span>
-        	</div>
+        	</div>-->
             <div class="restart">
         		<i class="fa fa-repeat"></i>
                 <span>Restart</span>
