--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <span class="moves">0</span> <em>Jogadas feitas</em><br>
                 <span class="jogadas-erradas">0</span> <em>Jogadas Erradas</em><br>
                 <span class="pontos">0</span> <em>Pontos</em><br>
+                <span id="cronometro">00:00</span>
             </div>
             <div class="restart">
         		<i class="fa fa-repeat"></i>
