Inserção de texto no modal

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 </div>
                 
                 <div class="modal-body">
-                    <span>Você fez 0 jogadas</span><br>
-                    <span>Total de pontos: 0</span><br>
-                    <span>Tempo total: 0min</span><br>
+                    <p>Você fez<span class="mensagem-final"> 0 </span>jogadas</p>
+                    <p>Total de pontos:<span class="pontos"> 0 </span><p/>
+                    <p>Tempo total:<span class="tempo-total">0</span></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">
