Atualização do score panel com os dados ao final do jogo

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 </div>
                 
                 <div class="modal-body">
-                    <p>Você fez<span class="mensagem-final"> 0 </span>jogadas</p>
-                    <p>Total de pontos:<span class="pontos"> 0 </span><p/>
-                    <p>Tempo total:<span class="tempo-total">0</span></p>
+                    <p><strong>Você fez:</strong> <span class="mensagem-final"> 0 </span> jogadas</p>
+                    <p><strong>Total de pontos:</strong> <span class="pontosfinal"> 0 </span><p/>
+                    <p><strong>Tempo total:</strong> <span class="tempo-total"> 0 </span></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">
